--- a/sample.inventory.yaml
+++ b/sample.inventory.yaml
@@ -1,13 +1,12 @@
 gitea_servers:
   hosts:
     x.x.x.x:
-      systemd_used: true
       gitea_path: "/usr/local/bin/gitea"
       gitea_work_path: "/var/lib/gitea"
       gitea_config: "/etc/gitea/app.ini"
+      backup_directory: "/home/git/"
 gitea_runners:
   hosts:
     x.x.x.x:
-      systemd_used: true
       action_runner_path: "/usr/local/bin/act_runner"
       action_work_path: "/var/lib/act_runner"
